<resources>
    <string name="app_name">James ShoeStore App!</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_fourth_fragment">Hello fourth fragment</string>
    <string name="email">-Email-</string>
    <string name="password">-Password-</string>
    <string name="onboarding_instruction1">Tap the next buttons to go to next screen.
    </string>
    <string name="Welcome2">Welcome to</string>
    <string name="try_it_here">Try it here!</string>
    <string name="shoe_name">-Shoe Name-</string>
    <string name="company_name">-Company Name-</string>
    <string name="shoe_size">-Shoe Size-</string>
    <string name="description">-Description-</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>